--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "maps-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pakalapati.github.io/maps-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "gh-pages": "^5.0.0"
   }
 }
