--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maps-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pakalapati.github.io/maps-project",
+  "homepage": "https://www.adityapakalapati.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
